Fixed: Responsive Design

--- a/sass/imports/1_drawer.scss
+++ b/sass/imports/1_drawer.scss
@@ -232,6 +232,7 @@ label[for="drawer-toggle"] {
                 & .stagecolumn {
                     display: flex;
                     flex: 1;
+                    flex-shrink: 0;
                     flex-direction: column;
 
                     & .stagebanner {
