UI Update: Main text is serifed
Makes it much easier to distinguish capital I and lowercase l.

--- a/sass/imports/2_content.scss
+++ b/sass/imports/2_content.scss
@@ -30,7 +30,9 @@
         color: $grey1;
         text-align: center;
         font-size: 500%;
-        font-weight: bold;
+        font-family: serif;
+        font-weight: thin;
+        letter-spacing: 1px;
         white-space: nowrap;
 
         cursor: default;
