Updated: Reference (more info)

--- a/sass/imports/reset.scss
+++ b/sass/imports/reset.scss
@@ -73,6 +73,15 @@ span.spinner {
     0% {
         content: "/-(0.0)-/"
     }
+    25% {
+        content: "\\-(0.0)-\\"
+    }
+    50% {
+        content: "\\-(0.0)-\\"
+    }
+    75% {
+        content: "\\-(0.0)-\\"
+    }
     100% {
         content: "\\-(0.0)-\\"
     }
