--- a/sass/main.scss
+++ b/sass/main.scss
@@ -52,7 +52,8 @@ $drawer-width: 23rem;
         "2_content",
         "input_styles",
         "media_queries",
-        "noscript",
-        "dark",
         "material_icons",
-        "word_generator"
+        "word_generator",
+        "noscript",
+        "glyphs",
+        "dark"
