--- a/sass/imports/1_drawer.scss
+++ b/sass/imports/1_drawer.scss
@@ -279,7 +279,7 @@ label[for="drawer-toggle"] {
 
                             & li {
                                 margin: 0;
-                                padding: 0.6rem 1.2rem;
+                                padding: 2% 1.2rem;
 
                                 font-size: 95%;
                                 letter-spacing: 0.02rem;
@@ -375,6 +375,7 @@ label[for="drawer-toggle"] {
                         display: flex;
 
                         & input[type=button]{
+                            background: $black1;
                             &:first-child {
                                 margin-left: 0;
                             }
@@ -389,7 +390,7 @@ label[for="drawer-toggle"] {
                         font-weight: 600;
                         color: $white1;
 
-                        background: $red1 !important;
+                        background: $red1;
                     }
                     &  input[name=theme]:hover {
                         color: $white1;
